[gd_scene load_steps=5 format=3 uid="uid://sp2ebalqw2gm"]

[ext_resource type="FontFile" uid="uid://csv0otmk1yxo7" path="res://arts/font/Pixel Game.otf" id="1_fu3sv"]
[ext_resource type="Script" uid="uid://brd3s3d2fap5f" path="res://script/next_level.gd" id="1_oyptk"]
[ext_resource type="AudioStream" uid="uid://dhwempgxbexyf" path="res://arts/audio/main menu/click.wav" id="3_n0y7m"]
[ext_resource type="AudioStream" uid="uid://c7jgwfjdku0kh" path="res://arts/audio/Level/next level.mp3" id="4_c8kkg"]

[node name="NextLevel" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_oyptk")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.63529414)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = -266.5
offset_right = 218.5
offset_bottom = 266.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_fu3sv")
theme_override_font_sizes/font_size = 82
text = "Level Selesai"

[node name="LvlSel" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fu3sv")
theme_override_font_sizes/font_size = 30
text = "Level Selanjutnya"

[node name="Ulang" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fu3sv")
theme_override_font_sizes/font_size = 30
text = "Ulangi"

[node name="Kel" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fu3sv")
theme_override_font_sizes/font_size = 30
text = "KELUAR"

[node name="SfxButton" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_n0y7m")
volume_db = -10.0

[node name="Win" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("4_c8kkg")
autoplay = true

[connection signal="pressed" from="VBoxContainer/LvlSel" to="." method="_on_lvl_sel_pressed"]
[connection signal="pressed" from="VBoxContainer/Ulang" to="." method="_on_ulang_pressed"]
[connection signal="pressed" from="VBoxContainer/Kel" to="." method="_on_kel_pressed"]
